--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 
-title: My Markdown Site
+title: Stewart's Test Site --- 
 description: A simple site using GitHub Pages and Markdown
 theme: minima
