--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@
 title: Stewart's Test Site --- 
 description: A simple site using GitHub Pages and Markdown
 theme: minima
+-----
+layout: default
+title: Contact
