--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: Stewart's Test Site --- 
+title: Stewart York Playground  
 description: A simple site using GitHub Pages and Markdown
 theme: minima
 
